Pull eslint config into a single new workspace package.

--- a/applications/mobile/package.json
+++ b/applications/mobile/package.json
@@ -12,12 +12,12 @@
     "postinstall": "expo-yarn-workspaces postinstall",
     "clean": "rimraf lib .expo",
     "test": "jest --passWithNoTests",
-    "test:updateSnapshot": "jest --updateSnapshot",
-    "test:watch": "yarn run test --watch",
-    "pretest": "run-p 'pretest:*'",
-    "pretest:typescript": "tsc -b .",
-    "pretest:lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "pretest:lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
+    "test-updateSnapshot": "yarn run test --updateSnapshot",
+    "test-watch": "yarn run test --watch",
+    "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
+    "pretest-typescript": "tsc -b .",
+    "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
+    "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
     "coverage": "jest --coverage"
   },
   "dependencies": {
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@expo/webpack-config": "^0.13.1",
+    "@monorepo-template/eslint-plugin": "0.0.1",
     "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
     "@types/jest": "^26.0.24",
@@ -58,8 +59,6 @@
     "babel-jest": "^27.0.6",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "expo-yarn-workspaces": "^1.5.2",
     "jest": "26.6.0",
     "jest-styled-components": "^7.0.5",
