--- a/package.json
+++ b/package.json
@@ -5,29 +5,16 @@
         "node": "14.x"
     },
     "scripts": {
-        "clean": "yarn workspaces foreach --parallel --topological --exclude '\\.' run clean && yarn run clean:build-cache",
-        "clean:build-cache": "rimraf .build-cache",
-        "build": "yarn workspaces foreach --parallel --topological run build",
-        "test": "yarn workspaces foreach --parallel --topological run test",
-        "pretest": "yarn workspaces foreach --parallel --topological run pretest",
-        "pretest:typescript": "yarn workspaces foreach --parallel --topological run pretest:typescript",
-        "pretest:lint": "yarn workspaces foreach --parallel --topological run pretest:lint",
-        "pretest:lint:fix": "yarn workspaces foreach --parallel --topological run pretest:lint:fix"
+        "clean": "yarn workspaces foreach --verbose --parallel --topological --exclude '\\.' run clean && yarn run clean-build-cache",
+        "clean-build-cache": "rimraf .build-cache",
+        "build": "yarn workspaces foreach --verbose --parallel --topological run build",
+        "test": "yarn workspaces foreach --verbose --parallel run test",
+        "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
+        "pretest-typescript": "yarn workspaces foreach --verbose --parallel --topological run pretest-typescript",
+        "pretest-lint": "yarn workspaces foreach --verbose --parallel run pretest-lint",
+        "pretest-lint-fix": "yarn workspaces foreach --verbose --parallel run pretest-lint-fix"
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^4.28.5",
-        "@typescript-eslint/parser": "^4.28.5",
-        "eslint": "7.32.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-import-resolver-typescript": "^2.4.0",
-        "eslint-plugin-import": "^2.23.4",
-        "eslint-plugin-jest": "^24.4.0",
-        "eslint-plugin-mysticatea": "^4.2.4",
-        "eslint-plugin-prefer-object-spread": "^1.2.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.24.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-plugin-react-native": "^3.11.0",
         "npm-run-all": "4.1.5",
         "prettier": "^2.3.2",
         "pretty-quick": "^3.1.1",
