--- a/applications/mobile-components-storybook/package.json
+++ b/applications/mobile-components-storybook/package.json
@@ -12,10 +12,10 @@
     "prestorybook": "yarn run generate-story-imports",
     "postinstall": "expo-yarn-workspaces postinstall",
     "clean": "rimraf lib .expo",
-    "pretest": "run-p 'pretest:*'",
-    "pretest:typescript": "tsc -b .",
-    "pretest:lint": "eslint App.tsx",
-    "pretest:lint:fix": "eslint App.tsx --fix"
+    "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
+    "pretest-typescript": "tsc -b .",
+    "pretest-lint": "eslint App.tsx",
+    "pretest-lint-fix": "eslint App.tsx --fix"
   },
   "config": {
     "react-native-storybook-loader": {
@@ -43,6 +43,7 @@
     "@babel/core": "^7.9.0",
     "@babel/runtime": "^7.15.3",
     "@expo/webpack-config": "^0.13.1",
+    "@monorepo-template/eslint-plugin": "0.0.1",
     "@storybook/addon-actions": "^5.3",
     "@storybook/addon-knobs": "^5.3",
     "@storybook/addon-links": "^5.3",
@@ -56,8 +57,6 @@
     "@types/styled-components-react-native": "^5.1.1",
     "babel-loader": "^8.2.2",
     "eslint": "7.32.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "expo-yarn-workspaces": "^1.5.2",
     "metro-config": "0.56",
     "npm-run-all": "4.1.5",
