--- a/applications/website/package.json
+++ b/applications/website/package.json
@@ -8,12 +8,12 @@
     "start": "next start",
     "clean": "rimraf lib .next",
     "test": "jest --passWithNoTests",
-    "test:updateSnapshot": "yarn run test --updateSnapshot",
-    "test:watch": "yarn run test --watch",
-    "pretest": "run-p 'pretest:*'",
-    "pretest:typescript": "tsc -b .",
-    "pretest:lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "pretest:lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
+    "test-updateSnapshot": "yarn run test --updateSnapshot",
+    "test-watch": "yarn run test --watch",
+    "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
+    "pretest-typescript": "tsc -b .",
+    "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
+    "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
   },
   "dependencies": {
     "@monorepo-template/brand": "0.0.1",
@@ -28,6 +28,7 @@
     "styled-reset": "^4.3.4"
   },
   "devDependencies": {
+    "@monorepo-template/eslint-plugin": "0.0.1",
     "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
