--- a/packages/mobile-components/package.json
+++ b/packages/mobile-components/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "clean": "rimraf lib",
     "test": "jest",
-    "test:updateSnapshot": "jest --updateSnapshot",
-    "test:watch": "yarn run test --watch",
-    "pretest": "run-p 'pretest:*'",
-    "pretest:typescript": "tsc -b .",
-    "pretest:lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "pretest:lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
+    "test-updateSnapshot": "yarn run test --updateSnapshot",
+    "test-watch": "yarn run test --watch",
+    "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
+    "pretest-typescript": "tsc -b .",
+    "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
+    "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
     "coverage": "jest --coverage"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@monorepo-template/eslint-plugin": "0.0.1",
     "@storybook/addon-actions": "^5.3",
     "@storybook/addon-knobs": "^5.3",
     "@storybook/addon-links": "^5.3",
@@ -41,12 +42,11 @@
     "@types/react": "~16.9.35",
     "@types/react-is": "^17.0.2",
     "@types/react-native": "~0.63.2",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.1",
     "babel-jest": "^27.0.6",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "26.6.0",
     "jest-styled-components": "^7.0.5",
     "npm-run-all": "4.1.5",
