--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -12,12 +12,12 @@
     "build": "tsc -b .",
     "clean": "rimraf lib build-storybook.log storybook-static",
     "test": "jest",
-    "test:updateSnapshot": "jest --updateSnapshot",
-    "test:watch": "yarn run test --watch",
-    "pretest": "run-p 'pretest:*'",
-    "pretest:typescript": "tsc -b .",
-    "pretest:lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "pretest:lint:fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
+    "test-updateSnapshot": "yarn run test --updateSnapshot",
+    "test-watch": "yarn run test --watch",
+    "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
+    "pretest-typescript": "tsc -b .",
+    "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
+    "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
     "coverage": "jest --coverage",
     "chromatic": "chromatic --exit-zero-on-changes"
   },
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@mdx-js/react": "^1.6.22",
+    "@monorepo-template/eslint-plugin": "0.0.1",
     "@storybook/addon-actions": "^6.3.6",
     "@storybook/addon-docs": "^6.3.6",
     "@storybook/addon-essentials": "^6.3.6",
