Move monorepo helpers out of eslint-plugin into separate package.

--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -9,6 +9,7 @@
         "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
     },
     "devDependencies": {
+        "@monorepo-template/monorepo-helpers": "0.0.1",
         "@typescript-eslint/eslint-plugin": "^4.28.5",
         "@typescript-eslint/parser": "^4.28.5",
         "eslint": "7.32.0",
