--- a/applications/mobile/package.json
+++ b/applications/mobile/package.json
@@ -18,7 +18,7 @@
     "pretest-typescript": "tsc -b .",
     "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
     "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
-    "coverage": "jest --coverage"
+    "coverage": "yarn run --coverage"
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
@@ -56,13 +56,10 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
-    "babel-jest": "^27.0.6",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
     "expo-yarn-workspaces": "^1.5.2",
     "jest": "26.6.0",
-    "jest-styled-components": "^7.0.5",
-    "jest-transform-stub": "^2.0.0",
     "metro-config": "0.56",
     "npm-run-all": "4.1.5",
     "react-test-renderer": "^17.0.2",
