--- a/packages/brand/jest.config.json
+++ b/packages/brand/jest.config.json
@@ -1,5 +1,3 @@
 {
-  "preset": "ts-jest",
-  "testEnvironment": "node",
-  "testPathIgnorePatterns": ["/node_modules/", "<rootDir>/lib/"]
+  "preset": "@monorepo-template/jest-config"
 }
