--- a/packages/mobile-components/package.json
+++ b/packages/mobile-components/package.json
@@ -15,7 +15,7 @@
     "pretest-typescript": "tsc -b .",
     "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
     "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
-    "coverage": "jest --coverage"
+    "coverage": "yarn run test --coverage"
   },
   "dependencies": {
     "@monorepo-template/brand": "0.0.1",
@@ -44,11 +44,9 @@
     "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.1",
-    "babel-jest": "^27.0.6",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
     "jest": "26.6.0",
-    "jest-styled-components": "^7.0.5",
     "npm-run-all": "4.1.5",
     "react-test-renderer": "^17.0.2",
     "rimraf": "3.0.2",
