--- a/packages/web-components/jest.config.json
+++ b/packages/web-components/jest.config.json
@@ -1,9 +1,3 @@
 {
-  "preset": "ts-jest",
-  "testEnvironment": "jsdom",
-  "setupFilesAfterEnv": ["<rootDir>/config/jest.setup.ts"],
-  "testPathIgnorePatterns": ["/node_modules/", "<rootDir>/lib/"],
-  "transform": {
-    "\\.[jt]sx?$": "ts-jest"
-  }
+  "preset": "@monorepo-template/jest-config/presets/react"
 }
