--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -18,7 +18,7 @@
     "pretest-typescript": "tsc -b .",
     "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
     "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
-    "coverage": "jest --coverage",
+    "coverage": "yarn run test --coverage",
     "chromatic": "chromatic --exit-zero-on-changes"
   },
   "dependencies": {
@@ -43,7 +43,6 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.6",
     "@testing-library/dom": "^8.1.0",
-    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^26.0.24",
@@ -57,12 +56,10 @@
     "chromatic": "^5.10.0-canary.0",
     "eslint": "7.32.0",
     "jest": "26.6.0",
-    "jest-styled-components": "^7.0.5",
     "npm-run-all": "4.1.5",
     "react-scripts": "4.0.3",
     "rimraf": "3.0.2",
     "themeprovider-storybook": "^1.7.2",
-    "ts-jest": "^26.5.6",
     "typescript": "4.3.5"
   }
 }
