--- a/applications/mobile/package.json
+++ b/applications/mobile/package.json
@@ -2,14 +2,13 @@
   "name": "@monorepo-template/mobile",
   "version": "0.0.1",
   "private": true,
-  "main": "__generated__/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "postinstall": "expo-yarn-workspaces postinstall",
     "clean": "rimraf lib .expo",
     "test": "jest --passWithNoTests",
     "test-updateSnapshot": "yarn run test --updateSnapshot",
@@ -23,7 +22,6 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@monorepo-template/brand": "0.0.1",
-    "@monorepo-template/expo-monorepo-config": "0.0.1",
     "@monorepo-template/mobile-components": "0.0.1",
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
@@ -48,7 +46,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@expo/webpack-config": "^0.13.1",
     "@monorepo-template/eslint-plugin": "0.0.1",
     "@testing-library/jest-native": "^4.0.1",
     "@testing-library/react-native": "^7.2.0",
@@ -56,11 +53,8 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
-    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
-    "expo-yarn-workspaces": "^1.5.2",
     "jest": "26.6.0",
-    "metro-config": "0.56",
     "npm-run-all": "4.1.5",
     "react-test-renderer": "^17.0.2",
     "rimraf": "3.0.2",
