--- a/applications/mobile-components-storybook/package.json
+++ b/applications/mobile-components-storybook/package.json
@@ -2,15 +2,14 @@
   "name": "@monorepo-template/mobile-components-storybook",
   "version": "0.0.1",
   "private": true,
-  "main": "__generated__/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "ENTRY_FILE=./__generated__/AppEntry.js expo start",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "start-storybook -p 6006",
     "generate-story-imports": "rnstl",
     "prestorybook": "yarn run generate-story-imports",
-    "postinstall": "expo-yarn-workspaces postinstall",
     "clean": "rimraf lib .expo",
     "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
     "pretest-typescript": "tsc -b .",
@@ -28,7 +27,6 @@
   },
   "dependencies": {
     "@monorepo-template/brand": "0.0.1",
-    "@monorepo-template/expo-monorepo-config": "0.0.1",
     "@monorepo-template/mobile-components": "0.0.1",
     "expo": "~42.0.3",
     "expo-asset": "~8.3.3",
@@ -41,8 +39,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/runtime": "^7.15.3",
-    "@expo/webpack-config": "^0.13.1",
     "@monorepo-template/eslint-plugin": "0.0.1",
     "@storybook/addon-actions": "^5.3",
     "@storybook/addon-knobs": "^5.3",
@@ -55,10 +51,7 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
-    "babel-loader": "^8.2.2",
     "eslint": "7.32.0",
-    "expo-yarn-workspaces": "^1.5.2",
-    "metro-config": "0.56",
     "npm-run-all": "4.1.5",
     "react-native-storybook-loader": "^2.0.4",
     "rimraf": "3.0.2",
