--- a/applications/mobile/tsconfig.json
+++ b/applications/mobile/tsconfig.json
@@ -14,7 +14,7 @@
       { "path": "../../packages/brand" },
       { "path": "../../packages/mobile-components" }
   ],
-  "files": ["App.tsx"],
+  "files": ["index.js", "App.tsx"],
   "include": ["src", "typings"],
   "exclude": [
     "**/node_modules/*",
