--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
         "pretest-lint": "yarn workspaces foreach --verbose --parallel run pretest-lint",
         "pretest-lint-fix": "yarn workspaces foreach --verbose --parallel run pretest-lint-fix"
     },
+    "dependencies": {
+        "react-native": "0.63.4"
+    },
     "devDependencies": {
+        "expo-yarn-workspaces": "^1.5.2",
         "npm-run-all": "4.1.5",
         "prettier": "^2.3.2",
-        "pretty-quick": "^3.1.1",
         "rimraf": "3.0.2",
         "typescript": "4.3.5"
     },
