--- a/packages/mobile-components/package.json
+++ b/packages/mobile-components/package.json
@@ -24,7 +24,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-is": "^17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "0.63.4",
     "react-native-web": "^0.17.1",
     "styled-components": "^5.3.0"
   },
@@ -44,7 +44,6 @@
     "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.1",
-    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
     "jest": "26.6.0",
     "npm-run-all": "4.1.5",
