--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "eslint": "7.32.0",
         "npm-run-all": "4.1.5",
         "rimraf": "3.0.2",
-        "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+        "react-native": "0.63.4",
         "@types/react-native": "~0.63.2"
     },
     "workspaces": {
