--- a/applications/website/package.json
+++ b/applications/website/package.json
@@ -13,7 +13,7 @@
     "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
     "pretest-typescript": "tsc -b .",
     "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix"
+    "pretest-lint-fix": "yarn run pretest-lint --fix"
   },
   "dependencies": {
     "@monorepo-template/brand": "0.0.1",
