--- a/packages/brand/package.json
+++ b/packages/brand/package.json
@@ -14,7 +14,7 @@
         "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
         "pretest-typescript": "tsc -b .",
         "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
-        "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
+        "pretest-lint-fix": "yarn run pretest-lint --fix",
         "coverage": "jest --coverage"
     },
     "dependencies": {
