--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -17,7 +17,7 @@
     "pretest": "run-p 'pretest-typescript' 'pretest-lint'",
     "pretest-typescript": "tsc -b .",
     "pretest-lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "pretest-lint-fix": "eslint 'src/**/*.{js,ts,tsx}' --fix",
+    "pretest-lint-fix": "yarn run pretest-lint --fix",
     "coverage": "yarn run test --coverage",
     "chromatic": "chromatic --exit-zero-on-changes"
   },
