--- a/.github/workflows/cd-push-chromatic.yml
+++ b/.github/workflows/cd-push-chromatic.yml
@@ -1,38 +1,9 @@
-name: "Continuous Integration"
+name: "Deploy Storybook to Chromatic"
 
 on:
   push:
 
 jobs:
-  test:
-    name: "Yarn Test"
-    runs-on: ubuntu-latest
-    if: ${{ !contains(toJSON(github.event.commits.*.message), '[skip ci]') }}
-    steps:
-      - name: "Checkout repository"
-        uses: actions/checkout@v2
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn2-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn2-
-
-      - name: "Install Node dependencies"
-        run: yarn install --immutable
-
-      - name: "Run pretest"
-        run: yarn run pretest
-
-      - name: "Run tests"
-        run: yarn run test
-
   check-chromatic-deployment:
     name: 'Check if we can Deploy Storybook to Chromatic'
     runs-on: ubuntu-latest
